<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使いかた"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title1"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text1"
            android:textSize="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text2"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text3"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/a_list_favorite"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text4"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title2"
            android:textSize="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text5"
            android:textSize="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/a_external"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text6"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text7"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text11"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text8"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text9"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_text10"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"/>



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    </LinearLayout>

</ScrollView>